fix tab tooltip hover selector; fix search tag text wrap

--- a/styles/search-tag.css
+++ b/styles/search-tag.css
@@ -1,6 +1,8 @@
 .search-tag {
 	cursor: pointer;
 
+	white-space: nowrap;
+
 	font-size: 13px;
 	color: rgb(72, 97, 107);
 
