--- a/styles/tab-bar.css
+++ b/styles/tab-bar.css
@@ -18,16 +18,21 @@
 }
 
 .tab {
-	--alpha: 1;
-
-	position: relative;
-	cursor: pointer;
-
-	height: 35px;
 	flex: 1;
+	position: relative;
 
 	max-width: 200px;
 	min-width: 30px;
+	height: 35px;
+}
+
+.tab-body {
+	--alpha: 1;
+
+	cursor: pointer;
+
+	height: 35px;
+
 	display: flex;
 	align-items: center;
 
@@ -118,7 +123,7 @@
 	transition: opacity 150ms ease-in;
 }
 
-.tab:hover > .tab-tooltip {
+.tab-body:hover + .tab-tooltip {
 	opacity: 1;
 	transition-delay: 0.75s;
 }
